# perseus-tailwind

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: default-config.js  lib.rs
